spec/e2e/loops/next/parsing_errors.lit
let a = next # error: [line 1] Syntax error at "next": I was expecting an expression here.
